--- a/workout/package.json
+++ b/workout/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "7.4.3",
     "@babel/runtime": "7.4.3",
     "babel-jest": "24.7.1",
+    "eslint-config-rallycoding": "^3.2.0",
     "jest": "24.7.1",
     "metro-react-native-babel-preset": "0.53.1",
     "react-test-renderer": "16.8.3"
